# respdiff-rs

./: .gitlab-ci.yml  Cargo.toml  README.md
ci/: Dockerfile  README
src/lib/: config.rs  database.rs  dataformat.rs  error.rs  lib.rs  matcher.rs  transceive.rs
test/msgdiff-json/: README.md  msgdiff.json  respdiff.cfg
