[package]
name = "respdiff"
version = "0.1.0"
authors = ["Tomas Krizek <tomas.krizek@nic.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "respdiff"
path = "src/lib/lib.rs"

[[bin]]
name = "transceiver"
path = "src/bin/transceiver.rs"

[dependencies]
lmdb-rkv = "0.14"
byteorder = "1"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2.0"
clap = "2"
domain = "0.6"
thiserror = "1.0"
rayon = "1.5"

[dev-dependencies]
tempdir = "0.3"
