[package]
name = "respdiff"
version = "0.1.0"
authors = ["Tomas Krizek <tomas.krizek@nic.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "respdiff"
path = "src/lib/lib.rs"

[dependencies]
lmdb-rkv = "0.14"
byteorder = "1"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0"
clap = "2"
domain = { git = "https://github.com/NLnetLabs/domain.git", rev = "8d31cac" }
thiserror = "1.0"
rayon = "1.5"
anyhow = { version = "1.0", features = ["backtrace"] }
futures = "0.3"
async-std = "1"

[dev-dependencies]
tempdir = "0.3"
