[package]
name = "respdiff"
version = "0.1.0"
authors = ["Tom Krizek <tkrizek@isc.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "respdiff"

[lib]
name = "respdiff"
path = "src/lib/lib.rs"

[dependencies]
lmdb-rkv = "0.14"
byteorder = "1"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
domain = { version= "0.7" }
thiserror = "1.0"
rayon = "1.6"
anyhow = { version = "1.0", features = ["backtrace"] }
futures = "0.3"
async-std = { version = "1", features = ["attributes"] }

[dev-dependencies]
tempdir = "0.3"
